# desktopmonitor

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
desktopmonitor/: __main__.py
desktopmonitor/actions/: __init__.py  get_core_info.py
desktopmonitor/models/: __init__.py  core.py  cpu.py
tests/actions/: get_core_info_test.py
tests/fixtures/: cpuinfo.stdout  cpupower.stdout  mpstat.stdout  sensors.stdout
